# fastapi-swagger-dark

./: .pre-commit-config.yaml  README.md  pyproject.toml  tasks.py
.github/workflows/: tests.yml
src/fastapi_swagger_dark/: __init__.py  swagger_ui_dark.min.css
